tests/js_error/source_locations/expression/yield_star/return_result_get_named_property_done_throws.exp
Error: 
   ┌ tests/js_error/source_locations/expression/yield_star/return_result_get_named_property_done_throws.js:10:19
   |
10 |             throw new Error();
   |                   ^
Stack trace:
  at get done (tests/js_error/source_locations/expression/yield_star/return_result_get_named_property_done_throws.js:10:19)
  at generator (tests/js_error/source_locations/expression/yield_star/return_result_get_named_property_done_throws.js:20:3)
  at return (<native>)
  at <global> (tests/js_error/source_locations/expression/yield_star/return_result_get_named_property_done_throws.js:25:1)